--- a/README.Rmd
+++ b/README.Rmd
@@ -12,7 +12,7 @@ knitr::opts_chunk$set(
   out.width = "100%"
 )
 ```
-# equationer
+# equationer <img src="man/figures/logo.png" align="right" height=140/>
 
 [![Build Status](https://travis-ci.com/UBESP-DCTV/equationer.svg?token=LB47B8iKQhmYmrAuxwVQ&branch=master)](https://travis-ci.com/UBESP-DCTV/equationer)
 [![Coverage status](https://codecov.io/gh/UBESP-DCTV/equationer/branch/master/graph/badge.svg)](https://codecov.io/github/UBESP-DCTV/equationer?branch=master)
