--- a/README.Rmd
+++ b/README.Rmd
@@ -15,7 +15,7 @@ library(DT)
 ```
 # equationer <img src="man/figures/logo.png" align="right" height=140/>
 
-[![Build Status](https://travis-ci.com/UBESP-DCTV/equationer.svg?token=LB47B8iKQhmYmrAuxwVQ&branch=master)](https://travis-ci.com/UBESP-DCTV/equationer)
+[![Build Status](https://travis-ci.org/UBESP-DCTV/equationer.svg?branch=master)](https://travis-ci.org/UBESP-DCTV/equationer)
 [![Coverage status](https://codecov.io/gh/UBESP-DCTV/equationer/branch/master/graph/badge.svg)](https://codecov.io/github/UBESP-DCTV/equationer?branch=master)
 
 [![lifecycle](https://img.shields.io/badge/lifecycle-maturing-blue.svg)](https://www.tidyverse.org/lifecycle/#maturing)
